# project_chimera

./: .gitignore  Dockerfile  MCP_CHAT_HISTORY.md  Makefile  README.md  REPORT.md  SPEC_CHECKLIST.md  coderabbit.yaml  pyproject.toml
.cursor/: rules
.github/workflows/: copilot-instructions.md  main.yml  repo-structure-check.yml
frontend/: app.js  index.html  package.json  styles.css
frontend/src/: App.jsx  index.css
ide-chat-history/: mcp-server-issue.md
project_chimera.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
research/: architecture_strategy.md  notes.md  tooling_strategy.md
scripts/: spec_check.py
skills/: README.md  __init__.py
skills/skill_advertiser/: README.md  __init__.py
skills/skill_fetch_trends/: README.md  __init__.py
skills/skill_generate_caption/: README.md  __init__.py
skills/skill_judge/: README.md  __init__.py
skills/skill_publish_content/: README.md  __init__.py
skills/skill_worker/: README.md  __init__.py
specs/: SDD.md  _meta.md  commerce.md  functional.md  openclaw_integration.md  technical.md
tests/: test_skills_interface.py  test_trend_fetcher.py
