[project]
name = "project_chimera"
version = "0.1.0"
description = "Project Chimera: Autonomous Influencer Network"
readme = "README.md"
authors = [
    { name = "Mihretu", email = "mihretu@example.com" }
]
license = { text = "MIT" }
requires-python = ">=3.10,<3.12"

dependencies = [
  "uv>=0.4",
  "pydantic>=2.5",
  "requests>=2.31",
  "redis>=4.7",
  "weaviate-client>=3.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.3",
  "ruff",
  "black",
  "isort"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["skills*"]
